@@ -28,40 +28,55 @@
 		/// </summary>
 		private void InitializeComponent()
 		{
-            this.cboObjects = new System.Windows.Forms.ComboBox();
+            this.txtSearchPattern = new System.Windows.Forms.TextBox();
+            this.lstItems = new System.Windows.Forms.ListBox();
             this.SuspendLayout();
             // 
-            // cboObjects
+            // txtSearchPattern
             // 
-            this.cboObjects.Anchor = ((System.Windows.Forms.AnchorStyles)(((System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Left) 
+            this.txtSearchPattern.Anchor = ((System.Windows.Forms.AnchorStyles)(((System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Left) 
             | System.Windows.Forms.AnchorStyles.Right)));
-            this.cboObjects.AutoCompleteMode = System.Windows.Forms.AutoCompleteMode.SuggestAppend;
-            this.cboObjects.AutoCompleteSource = System.Windows.Forms.AutoCompleteSource.CustomSource;
-            this.cboObjects.Location = new System.Drawing.Point(0, 0);
-            this.cboObjects.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
-            this.cboObjects.Name = "cboObjects";
-            this.cboObjects.Size = new System.Drawing.Size(684, 24);
-            this.cboObjects.TabIndex = 0;
+            this.txtSearchPattern.Location = new System.Drawing.Point(12, 12);
+            this.txtSearchPattern.Name = "txtSearchPattern";
+            this.txtSearchPattern.Size = new System.Drawing.Size(553, 22);
+            this.txtSearchPattern.TabIndex = 2;
+            this.txtSearchPattern.TextChanged += new System.EventHandler(this.txtSearchPattern_TextChanged);
+            // 
+            // lstItems
+            // 
+            this.lstItems.Anchor = ((System.Windows.Forms.AnchorStyles)((((System.Windows.Forms.AnchorStyles.Top | System.Windows.Forms.AnchorStyles.Bottom) 
+            | System.Windows.Forms.AnchorStyles.Left) 
+            | System.Windows.Forms.AnchorStyles.Right)));
+            this.lstItems.FormattingEnabled = true;
+            this.lstItems.ItemHeight = 16;
+            this.lstItems.Location = new System.Drawing.Point(12, 38);
+            this.lstItems.Name = "lstItems";
+            this.lstItems.Size = new System.Drawing.Size(553, 244);
+            this.lstItems.TabIndex = 3;
+            this.lstItems.DoubleClick += new System.EventHandler(this.lstItems_DoubleClick);
             // 
             // FindObjectForm
             // 
             this.AutoScaleDimensions = new System.Drawing.SizeF(8F, 16F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
-            this.ClientSize = new System.Drawing.Size(685, 26);
-            this.Controls.Add(this.cboObjects);
-            this.FormBorderStyle = System.Windows.Forms.FormBorderStyle.FixedToolWindow;
-            this.Margin = new System.Windows.Forms.Padding(4, 4, 4, 4);
+            this.ClientSize = new System.Drawing.Size(577, 295);
+            this.Controls.Add(this.lstItems);
+            this.Controls.Add(this.txtSearchPattern);
+            this.FormBorderStyle = System.Windows.Forms.FormBorderStyle.None;
+            this.Margin = new System.Windows.Forms.Padding(4);
             this.Name = "FindObjectForm";
             this.StartPosition = System.Windows.Forms.FormStartPosition.CenterParent;
             this.Text = "Find Object";
             this.Load += new System.EventHandler(this.FindObjectForm_Load);
             this.Shown += new System.EventHandler(this.FindObjectForm_Shown);
             this.ResumeLayout(false);
+            this.PerformLayout();
 
 		}
 
 		#endregion
 
-		private System.Windows.Forms.ComboBox cboObjects;
+        private System.Windows.Forms.TextBox txtSearchPattern;
+        private System.Windows.Forms.ListBox lstItems;
 	}
 }
